--- a/get_data/game_info_api.ipynb
+++ b/get_data/game_info_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "8aeb593c-bd4f-40e2-a16b-4e27cad74dc8",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "a086d63b-6213-47db-8010-56b2335a2279",
    "metadata": {},
    "outputs": [],
@@ -35,15 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "0d9aa742-8578-4e2c-8c37-b5c82e4c7f9f",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "131984"
+      "text/plain": [
+       "131984"
+      ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "13817d4a-fe06-4199-a87d-f9c0f5e04238",
    "metadata": {},
    "outputs": [],
@@ -122,7 +124,6 @@
     "    columns = ', '.join(need_data_dic.keys())\n",
     "    \n",
     "    sql = \"INSERT IGNORE INTO %s ( %s ) VALUES ( %s )\" % ('game_info', columns, placeholders)\n",
-    "    \n",
     "    return db_function.execute_insert(sql, list(need_data_dic.values()))"
    ]
   },
@@ -132,16 +133,16 @@
    "id": "501444e5-d013-4a6e-b3cf-e1d239f7389b",
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 52/131984 [04:35<194:24:14,  5.30s/it]"
+      "  0%|                                                                                                                                                                                                                                        | 2/131984 [00:10<191:06:03,  5.21s/it]"
      ]
     }
    ],
@@ -178,8 +179,8 @@
     "                print(url, resp)\n",
     "\n",
     "            game_info_resp = resp.json()\n",
-    "            if game_info_resp and game_info_resp[str(appid)]['success']:\n",
-    "                res = data_insert(game_info_resp)\n",
+    "            if game_info_resp and list(game_info_resp.values())[0]['success']:\n",
+    "                res = data_insert(list(game_info_resp.values())[0]['data'])\n",
     "            sleep(5)\n",
     "\n",
     "        except KeyboardInterrupt as e:\n",
