platform, comming soon, game아닌  데이터 제외

--- a/get_data/game_info_api.ipynb
+++ b/get_data/game_info_api.ipynb
@@ -21,42 +21,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a086d63b-6213-47db-8010-56b2335a2279",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "resp = requests.get(\" http://api.steampowered.com/ISteamApps/GetAppList/v0002/?format=json\")\n",
-    "app_list = resp.json()\n",
-    "apps = app_list['applist']['apps']\n",
-    "\n",
-    "with open('C:\\\\Users\\weejw\\Documents\\steamRecommendation\\db_config\\db_auth.yaml', 'r') as file:\n",
-    "    db_auth = yaml.safe_load(file)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "0d9aa742-8578-4e2c-8c37-b5c82e4c7f9f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "131991"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(apps)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "13817d4a-fe06-4199-a87d-f9c0f5e04238",
    "metadata": {},
    "outputs": [],
@@ -66,6 +30,9 @@
     "             'platforms', 'release_date', 'supported_languages', 'categories', 'genres', 'recommendations']\n",
     "    \n",
     "    need_data_dic ={}\n",
+    "    if game_info['release_date']['coming_soon']:\n",
+    "        return \n",
+    "    \n",
     "    for key, data in game_info.items():\n",
     "        if key in need_data:\n",
     "            if key in [\"developers\", \"publishers\"]:\n",
@@ -81,14 +48,12 @@
     "                res = \"\"\n",
     "                for platform, boolean in data.items():\n",
     "                    if boolean:\n",
-    "                       res += platform \n",
+    "                       res += f\"{platform},\"\n",
     "                data = res\n",
     "\n",
     "            elif key == \"release_date\":\n",
-    "                if data['coming_soon']:\n",
-    "                    data = 'coming_soon'\n",
-    "                else:\n",
-    "                    data = data['date']\n",
+    "                data = data['date']\n",
+    "                \n",
     "            elif key == \"supported_languages\":\n",
     "                data = re.sub('<.*?>|[-*]', '',data).replace(\"음성이 지원되는 언어\",\", 음성이 지원되는 언어\")\n",
     "\n",
@@ -142,14 +107,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|▏                                                                                                                                                                                                                                      | 90/131991 [07:32<193:13:29,  5.27s/it]"
+      "  0%|                                                                                                                                                                                                                                       | 44/131995 [03:51<192:16:44,  5.25s/it]"
      ]
     }
    ],
    "source": [
+    "resp = requests.get(\" http://api.steampowered.com/ISteamApps/GetAppList/v0002/?format=json\")\n",
+    "app_list = resp.json()\n",
+    "apps = app_list['applist']['apps']\n",
+    "\n",
     "start_time = time.time()\n",
     "try_cnt = 0\n",
     "db_function = None\n",
+    "\n",
+    "with open('C:\\\\Users\\weejw\\Documents\\steamRecommendation\\db_config\\db_auth.yaml', 'r') as file:\n",
+    "    db_auth = yaml.safe_load(file)\n",
+    "\n",
+    "\n",
     "try:    \n",
     "    db_function = db_execute(db_auth['local_db'][\"host\"], \n",
     "                             db_auth['local_db'][\"port\"],\n",
@@ -180,8 +154,14 @@
     "\n",
     "            game_info_resp = resp.json()\n",
     "            game_info = list(game_info_resp.values())[0]\n",
-    "            if game_info_resp and game_info['success'] and game_info['data']['type'] == \"game\":\n",
+    "            if game_info['success'] and game_info['data']:\n",
+    "                \n",
+    "                if 'Playtest' in game_info['data']['name']:\n",
+    "                    continue\n",
+    "                \n",
+    "                if game_info['data']['type'] == \"game\":\n",
     "                    res = data_insert(game_info['data'])\n",
+    "                    \n",
     "            sleep(5)\n",
     "\n",
     "        except KeyboardInterrupt as e:\n",
