today last commit

--- a/get_data/game_info_api.ipynb
+++ b/get_data/game_info_api.ipynb
@@ -30,8 +30,7 @@
     "             'platforms', 'release_date', 'supported_languages', 'categories', 'genres', 'recommendations']\n",
     "    \n",
     "    need_data_dic ={}\n",
-    "    if game_info['release_date']['coming_soon']:\n",
-    "        return \n",
+    "   \n",
     "    \n",
     "    for key, data in game_info.items():\n",
     "        if key in need_data:\n",
@@ -46,9 +45,7 @@
     "\n",
     "            elif key == \"platforms\":\n",
     "                res = \"\"\n",
-    "                for platform, boolean in data.items():\n",
-    "                    if boolean:\n",
-    "                       res += f\"{platform},\"\n",
+    "                platforms = ','.join([platform for platform, boolean in list(game_info_resp.values())[0]['data']['platforms'].items() if boolean])\n",
     "                data = res\n",
     "\n",
     "            elif key == \"release_date\":\n",
@@ -107,7 +104,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|                                                                                                                                                                                                                                       | 44/131995 [03:51<192:16:44,  5.25s/it]"
+      "  0%|█                                                                                                                                                                                                                                     | 605/132003 [53:07<193:33:38,  5.30s/it]"
      ]
     }
    ],
@@ -153,10 +150,11 @@
     "                print(url, resp)\n",
     "\n",
     "            game_info_resp = resp.json()\n",
-    "            game_info = list(game_info_resp.values())[0]\n",
+    "            if game_info_resp:\n",
+    "                game_info = list(game_info_resp.values())[0]\n",
     "            if game_info['success'] and game_info['data']:\n",
     "                \n",
-    "                if 'Playtest' in game_info['data']['name']:\n",
+    "                if 'Playtest' in game_info['data']['name'] or game_info['data']['release_date']['coming_soon']:\n",
     "                    continue\n",
     "                \n",
     "                if game_info['data']['type'] == \"game\":\n",
