--- a/get_data/review_api.ipynb
+++ b/get_data/review_api.ipynb
@@ -33,7 +33,7 @@
     "    for _, review in reviews[0]['reviews'].items():\n",
     "        author = review['author']\n",
     "        steamid = author['steamid']\n",
-    "        sql = \"SELECT steam_appid FROM review WHERE steam_appid=%s AND steamid=%s\" % (appid, steamid)\n",
+    "        sql = \"SELECT id FROM review WHERE steam_appid=%s AND steamid=%s\" % (appid, steamid)\n",
     "        if db_function.execute_select(sql):\n",
     "            return\n",
     "        \n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "f9272240-ea1e-42b0-aa9f-67cdee7b3ef4",
    "metadata": {
     "tags": []
@@ -65,34 +65,35 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|                                                                                                                                                                                                                                                        | 0/51 [00:00<?, ?it/s]"
+      "  0%|                                                                                                                                                                                                                                                        | 0/32 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "뭔데 1830510\n",
-      "1830510 ??\n",
-      "({'reviews': {}, 'query_summary': {'total_reviews': -1}, 'cursors': {'*': 'Thu Dec  9 15:32:44 2021'}}, 1)\n"
+      "[appID = 1829300] expected #reviews = 1\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|                                                                                                                                                                                                                                                        | 0/51 [00:05<?, ?it/s]\n"
+      " 94%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████               | 30/32 [02:37<00:10,  5.24s/it]"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "\u001B[1;32m~\\AppData\\Local\\Temp/ipykernel_20960/2535631311.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     37\u001B[0m         \u001B[1;32mif\u001B[0m \u001B[0mreviews\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;34m'reviews'\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     38\u001B[0m             \u001B[0mreview_insert\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mreviews\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mappid\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 39\u001B[1;33m         \u001B[0msleep\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;36m5\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     40\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     41\u001B[0m \u001B[1;32mexcept\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[appID = 1822190] expected #reviews = 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 32/32 [02:47<00:00,  5.25s/it]\n"
      ]
     }
    ],
@@ -114,7 +115,7 @@
     "    sql = \"SELECT steam_appid FROM game_info\"\n",
     "    app_ids = db_function.execute_select(sql)\n",
     "    for appid in tqdm(app_ids):\n",
-    "        appdid = appid[0]\n",
+    "        appid = appid[0]\n",
     "        try_cnt +=1\n",
     "        current_time = time.time()\n",
     "        elapsed_time = current_time - start_time\n",
@@ -130,7 +131,6 @@
     "        request_params['language'] = 'korean'\n",
     "\n",
     "        reviews = steamreviews.download_reviews_for_app_id(appid,chosen_request_params=request_params)\n",
-    "        print(reviews)\n",
     "        if reviews[0]['reviews']:\n",
     "            review_insert(reviews, appid)\n",
     "        sleep(5)\n",
@@ -143,14 +143,6 @@
     "    db_function.conn.close()\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "88a12704-b6d9-4155-a4ac-d26407e63b90",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
