review steam api로 수정

--- a/get_data/game_info_api.ipynb
+++ b/get_data/game_info_api.ipynb
@@ -104,7 +104,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|█                                                                                                                                                                                                                                     | 605/132003 [53:07<193:33:38,  5.30s/it]"
+      "  2%|████▋                                                                                                                                                                                                                               | 2689/132256 [2:37:34<50:54:19,  1.41s/it]"
      ]
     }
    ],
@@ -128,16 +128,15 @@
     "                             db_auth['local_db'][\"db\"], \n",
     "                             db_auth['local_db'][\"passwd\"])\n",
     "    for app_info in tqdm(apps):\n",
-    "        try_cnt +=1\n",
-    "        current_time = time.time()\n",
-    "        elapsed_time = current_time - start_time\n",
-    "\n",
-    "        if try_cnt > 200 and elapsed_time < 300:\n",
-    "            sleep(60)\n",
-    "            try_cnt = 0\n",
-    "            start_time = time.time()\n",
-    "\n",
     "        try:\n",
+    "            try_cnt +=1\n",
+    "            current_time = time.time()\n",
+    "            elapsed_time = current_time - start_time\n",
+    "            if try_cnt > 200 and elapsed_time < 300:\n",
+    "                sleep(60)\n",
+    "                try_cnt = 0\n",
+    "                start_time = time.time()\n",
+    "\n",
     "            appid = app_info['appid']\n",
     "            sql = \"SELECT id FROM game_info WHERE steam_appid=%s\" % appid\n",
     "            if db_function.execute_select(sql):\n",
@@ -152,6 +151,7 @@
     "            game_info_resp = resp.json()\n",
     "            if game_info_resp:\n",
     "                game_info = list(game_info_resp.values())[0]\n",
+    "                \n",
     "            if game_info['success'] and game_info['data']:\n",
     "                \n",
     "                if 'Playtest' in game_info['data']['name'] or game_info['data']['release_date']['coming_soon']:\n",
@@ -164,7 +164,10 @@
     "\n",
     "        except KeyboardInterrupt as e:\n",
     "            break\n",
-    "\n",
+    "        \n",
+    "        except json.decoder.JSONDecodeError:\n",
+    "                continue\n",
+    "                \n",
     "        except:\n",
     "            raise\n",
     "            \n",
