--- a/get_data/review_api.ipynb
+++ b/get_data/review_api.ipynb
@@ -15,8 +15,9 @@
     "import steamreviews\n",
     "from time import sleep\n",
     "import os\n",
+    "import json\n",
     "os.chdir(\"C:\\\\Users\\weejw\\Documents\\steamRecommendation\")\n",
-    "from db_config.db_funtion import db_execute"
+    "from db_config.db_funtion import db_execute\n"
    ]
   },
   {
@@ -26,25 +27,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def review_insert(reviews, appid):\n",
-    "    need_data = ['votes_up', 'votes_funny', 'steam_purchase', 'received_for_free', 'written_during_early_access']\n",
+    "def review_insert(reviews, appid, review_type):\n",
+    "    need_data = ['votes_up', 'votes_funny', 'steam_purchase', 'received_for_free', 'written_during_early_access', 'review']\n",
     "    need_data_dic ={'steam_appid': appid}\n",
     "        \n",
-    "    for _, review in reviews[0]['reviews'].items():\n",
+    "    for review in reviews['reviews']:\n",
     "        author = review['author']\n",
     "        steamid = author['steamid']\n",
-    "        sql = \"SELECT id FROM review WHERE steam_appid=%s AND steamid=%s\" % (appid, steamid)\n",
+    "        sql = \"SELECT id FROM review WHERE steam_appid=%s AND steamid='%s'\" % (appid, steamid)\n",
     "        if db_function.execute_select(sql):\n",
     "            return\n",
-    "        \n",
     "        for k, v in author.items():\n",
-    "            \n",
     "            if k == 'last_played':\n",
     "                v = datetime.fromtimestamp(v).strftime(\"%Y-%m-%d %H:%M:%S\")\n",
     "            need_data_dic[k] = v\n",
     "        \n",
     "        for col in need_data:\n",
     "            need_data_dic[col] = review[col]\n",
+    "            \n",
+    "        \n",
+    "        need_data_dic['review_type'] = review_type\n",
     "        \n",
     "        placeholders = ', '.join(['%s'] * len(need_data_dic))\n",
     "        columns = ', '.join(need_data_dic.keys())\n",
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f9272240-ea1e-42b0-aa9f-67cdee7b3ef4",
    "metadata": {
     "tags": []
@@ -65,35 +67,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|                                                                                                                                                                                                                                                        | 0/32 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[appID = 1829300] expected #reviews = 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 94%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████               | 30/32 [02:37<00:10,  5.24s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[appID = 1822190] expected #reviews = 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 32/32 [02:47<00:00,  5.25s/it]\n"
+      "  0%|▎                                                                                                                                                                                                                                           | 4/3518 [00:21<5:12:17,  5.33s/it]"
      ]
     }
    ],
@@ -101,6 +75,9 @@
     "start_time = time.time()\n",
     "try_cnt = 0\n",
     "db_function = None\n",
+    "\n",
+    "start_time = time.time()\n",
+    "try_cnt = 0\n",
     "\n",
     "with open('C:\\\\Users\\weejw\\Documents\\steamRecommendation\\db_config\\db_auth.yaml', 'r') as file:\n",
     "    db_auth = yaml.safe_load(file)\n",
@@ -115,25 +92,41 @@
     "    sql = \"SELECT steam_appid FROM game_info\"\n",
     "    app_ids = db_function.execute_select(sql)\n",
     "    for appid in tqdm(app_ids):\n",
-    "        appid = appid[0]\n",
-    "        try_cnt +=1\n",
-    "        current_time = time.time()\n",
-    "        elapsed_time = current_time - start_time\n",
+    "        try:\n",
+    "            try_cnt +=1\n",
+    "            current_time = time.time()\n",
+    "            elapsed_time = current_time - start_time\n",
+    "            if try_cnt > 200 and elapsed_time < 300:\n",
+    "                sleep(60)\n",
+    "                try_cnt = 0\n",
+    "                start_time = time.time()\n",
     "\n",
-    "        if try_cnt > 200 and elapsed_time < 300:\n",
-    "            sleep(60)\n",
-    "            try_cnt = 0\n",
-    "            start_time = time.time()\n",
+    "            appid = appid[0]\n",
     "            \n",
+    "            review_type='negative'\n",
+    "            num_per_page=100\n",
+    "            day_range=100\n",
+    "            language='korean'\n",
+    "            \n",
+    "            \n",
+    "            url = f\"https://store.steampowered.com/appreviews/{appid}?json=1&review_type={review_type}&day_range={day_range}&num_per_page={num_per_page}&language={language}\"\n",
+    "            resp = requests.get(url)\n",
+    "            \n",
+    "            if not resp.ok:\n",
+    "                print(url, resp)\n",
+    "            reviews = resp.json()\n",
+    "            \n",
+    "            if reviews['reviews']:\n",
+    "                review_insert(reviews, appid, review_type)\n",
     "\n",
+    "            sleep(5)\n",
+    "\n",
+    "            \n",
+    "        except KeyboardInterrupt as e:\n",
+    "            break\n",
     "        \n",
-    "        request_params = dict()\n",
-    "        request_params['language'] = 'korean'\n",
-    "\n",
-    "        reviews = steamreviews.download_reviews_for_app_id(appid,chosen_request_params=request_params)\n",
-    "        if reviews[0]['reviews']:\n",
-    "            review_insert(reviews, appid)\n",
-    "        sleep(5)\n",
+    "        except json.decoder.JSONDecodeError:\n",
+    "                continue\n",
     "        \n",
     "except:\n",
     "    raise\n",
