platform code 수정

--- a/get_data/game_info_api.ipynb
+++ b/get_data/game_info_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "8aeb593c-bd4f-40e2-a16b-4e27cad74dc8",
    "metadata": {},
    "outputs": [],
@@ -14,13 +14,15 @@
     "from time import sleep\n",
     "import time\n",
     "import os\n",
+    "import json\n",
+    "\n",
     "os.chdir(\"C:\\\\Users\\weejw\\Documents\\steamRecommendation\")\n",
     "from db_config.db_funtion import db_execute\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "13817d4a-fe06-4199-a87d-f9c0f5e04238",
    "metadata": {},
    "outputs": [],
@@ -45,7 +47,7 @@
     "\n",
     "            elif key == \"platforms\":\n",
     "                res = \"\"\n",
-    "                platforms = ','.join([platform for platform, boolean in list(game_info_resp.values())[0]['data']['platforms'].items() if boolean])\n",
+    "                platforms = ','.join([platform for platform, boolean in data['platforms'].items() if boolean])\n",
     "                data = res\n",
     "\n",
     "            elif key == \"release_date\":\n",
@@ -104,7 +106,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|████▋                                                                                                                                                                                                                               | 2689/132256 [2:37:34<50:54:19,  1.41s/it]"
+      "  0%|                                                                                                                                                                                                                                        | 1/132259 [00:05<192:14:35,  5.23s/it]"
      ]
     }
    ],
