bugfix: platforms data

--- a/get_data/game_info_api.ipynb
+++ b/get_data/game_info_api.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "13817d4a-fe06-4199-a87d-f9c0f5e04238",
    "metadata": {},
    "outputs": [],
@@ -46,9 +46,8 @@
     "                continue\n",
     "\n",
     "            elif key == \"platforms\":\n",
-    "                res = \"\"\n",
-    "                platforms = ','.join([platform for platform, boolean in data['platforms'].items() if boolean])\n",
-    "                data = res\n",
+    "                print(data.items())\n",
+    "                data = ','.join([platform for platform, boolean in data.items() if boolean])\n",
     "\n",
     "            elif key == \"release_date\":\n",
     "                data = data['date']\n",
@@ -106,7 +105,97 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|                                                                                                                                                                                                                                        | 1/132259 [00:05<192:14:35,  5.23s/it]"
+      "  0%|                                                                                                                                                                                                                                        | 19/132259 [01:13<93:30:23,  2.55s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('windows', True), ('mac', False), ('linux', False)])\n",
+      "windows\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|                                                                                                                                                                                                                                       | 21/132259 [01:23<127:07:26,  3.46s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('windows', True), ('mac', True), ('linux', False)])\n",
+      "windows,mac\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|                                                                                                                                                                                                                                       | 22/132259 [01:29<142:04:25,  3.87s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('windows', True), ('mac', True), ('linux', False)])\n",
+      "windows,mac\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|                                                                                                                                                                                                                                       | 24/132259 [01:39<164:35:20,  4.48s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('windows', True), ('mac', False), ('linux', False)])\n",
+      "windows\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|                                                                                                                                                                                                                                       | 26/132259 [01:50<177:51:18,  4.84s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('windows', True), ('mac', True), ('linux', False)])\n",
+      "windows,mac\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|                                                                                                                                                                                                                                       | 27/132259 [01:55<182:34:29,  4.97s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('windows', True), ('mac', True), ('linux', True)])\n",
+      "windows,mac,linux\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|                                                                                                                                                                                                                                       | 28/132259 [02:00<186:21:21,  5.07s/it]"
      ]
     }
    ],
