top 100에 대해서만 작업하도록 변경

--- a/get_data/game_info_api.ipynb
+++ b/get_data/game_info_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "8aeb593c-bd4f-40e2-a16b-4e27cad74dc8",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "13817d4a-fe06-4199-a87d-f9c0f5e04238",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,6 @@
     "                continue\n",
     "\n",
     "            elif key == \"platforms\":\n",
-    "                print(data.items())\n",
     "                data = ','.join([platform for platform, boolean in data.items() if boolean])\n",
     "\n",
     "            elif key == \"release_date\":\n",
@@ -92,8 +91,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "501444e5-d013-4a6e-b3cf-e1d239f7389b",
+   "execution_count": 6,
+   "id": "4dc68bf0-c6db-4b1b-9463-02e0d161be48",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# resp = requests.get(\"http://api.steampowered.com/ISteamApps/GetAppList/v0002/?format=json\")\n",
+    "# app_list = resp.json()\n",
+    "# apps = app_list['applist']['apps']\n",
+    "\n",
+    "# MEMO: top 100 games\n",
+    "url = f\"http://steamspy.com/api.php?request=top100forever\"\n",
+    "resp = requests.get(url)\n",
+    "\n",
+    "top_game_info =resp.json()\n",
+    "\n",
+    "with open(\"id_list.txt\",'w') as file:\n",
+    "    file.write(str(list(top_game_info.keys())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e4a87d2d-94d3-4b3e-af22-1b936e3375f8",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -105,105 +130,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|                                                                                                                                                                                                                                        | 19/132259 [01:13<93:30:23,  2.55s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_items([('windows', True), ('mac', False), ('linux', False)])\n",
-      "windows\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|                                                                                                                                                                                                                                       | 21/132259 [01:23<127:07:26,  3.46s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_items([('windows', True), ('mac', True), ('linux', False)])\n",
-      "windows,mac\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|                                                                                                                                                                                                                                       | 22/132259 [01:29<142:04:25,  3.87s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_items([('windows', True), ('mac', True), ('linux', False)])\n",
-      "windows,mac\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|                                                                                                                                                                                                                                       | 24/132259 [01:39<164:35:20,  4.48s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_items([('windows', True), ('mac', False), ('linux', False)])\n",
-      "windows\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|                                                                                                                                                                                                                                       | 26/132259 [01:50<177:51:18,  4.84s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_items([('windows', True), ('mac', True), ('linux', False)])\n",
-      "windows,mac\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|                                                                                                                                                                                                                                       | 27/132259 [01:55<182:34:29,  4.97s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_items([('windows', True), ('mac', True), ('linux', True)])\n",
-      "windows,mac,linux\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|                                                                                                                                                                                                                                       | 28/132259 [02:00<186:21:21,  5.07s/it]"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 100/100 [08:56<00:00,  5.37s/it]\n"
      ]
     }
    ],
    "source": [
-    "resp = requests.get(\" http://api.steampowered.com/ISteamApps/GetAppList/v0002/?format=json\")\n",
-    "app_list = resp.json()\n",
-    "apps = app_list['applist']['apps']\n",
-    "\n",
     "start_time = time.time()\n",
     "try_cnt = 0\n",
     "db_function = None\n",
@@ -218,7 +149,7 @@
     "                             db_auth['local_db'][\"user\"],\n",
     "                             db_auth['local_db'][\"db\"], \n",
     "                             db_auth['local_db'][\"passwd\"])\n",
-    "    for app_info in tqdm(apps):\n",
+    "    for appid in tqdm(top_game_info.keys()):\n",
     "        try:\n",
     "            try_cnt +=1\n",
     "            current_time = time.time()\n",
@@ -228,7 +159,6 @@
     "                try_cnt = 0\n",
     "                start_time = time.time()\n",
     "\n",
-    "            appid = app_info['appid']\n",
     "            sql = \"SELECT id FROM game_info WHERE steam_appid=%s\" % appid\n",
     "            if db_function.execute_select(sql):\n",
     "                continue\n",
