--- a/get_data/review_api.ipynb
+++ b/get_data/review_api.ipynb
@@ -16,6 +16,7 @@
     "from time import sleep\n",
     "import os\n",
     "import json\n",
+    "import ast\n",
     "os.chdir(\"C:\\\\Users\\weejw\\Documents\\steamRecommendation\")\n",
     "from db_config.db_funtion import db_execute\n"
    ]
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f9272240-ea1e-42b0-aa9f-67cdee7b3ef4",
    "metadata": {
     "tags": []
@@ -67,7 +68,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|▎                                                                                                                                                                                                                                           | 4/3518 [00:21<5:12:17,  5.33s/it]"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 100/100 [09:13<00:00,  5.54s/it]\n",
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 100/100 [09:14<00:00,  5.55s/it]\n"
      ]
     }
    ],
@@ -90,51 +92,54 @@
     "                             db_auth['local_db'][\"passwd\"])\n",
     "\n",
     "    sql = \"SELECT steam_appid FROM game_info\"\n",
-    "    app_ids = db_function.execute_select(sql)\n",
-    "    for appid in tqdm(app_ids):\n",
-    "        try:\n",
-    "            try_cnt +=1\n",
-    "            current_time = time.time()\n",
-    "            elapsed_time = current_time - start_time\n",
-    "            if try_cnt > 200 and elapsed_time < 300:\n",
-    "                sleep(60)\n",
-    "                try_cnt = 0\n",
-    "                start_time = time.time()\n",
+    "    #app_ids = db_function.execute_select(sql)\n",
+    "    \n",
+    "    # MEMO: top100 games\n",
+    "    with open(\"C:\\\\Users\\weejw\\Documents\\steamRecommendation\\leanring\\id_list.txt\",\"r\") as file:\n",
+    "        id_list = file.readlines()\n",
+    "    \n",
+    "    app_ids = ast.literal_eval(id_list[0])\n",
+    "    for review_type in ['positive','negative']:\n",
+    "        for appid in tqdm(app_ids):\n",
+    "            try:\n",
+    "                try_cnt +=1\n",
+    "                current_time = time.time()\n",
+    "                elapsed_time = current_time - start_time\n",
+    "                if try_cnt > 200 and elapsed_time < 300:\n",
+    "                    sleep(60)\n",
+    "                    try_cnt = 0\n",
+    "                    start_time = time.time()\n",
     "\n",
-    "            appid = appid[0]\n",
-    "            \n",
-    "            review_type='negative'\n",
-    "            num_per_page=100\n",
-    "            day_range=100\n",
-    "            language='korean'\n",
-    "            \n",
-    "            \n",
-    "            url = f\"https://store.steampowered.com/appreviews/{appid}?json=1&review_type={review_type}&day_range={day_range}&num_per_page={num_per_page}&language={language}\"\n",
-    "            resp = requests.get(url)\n",
-    "            \n",
-    "            if not resp.ok:\n",
-    "                print(url, resp)\n",
-    "            reviews = resp.json()\n",
-    "            \n",
-    "            if reviews['reviews']:\n",
-    "                review_insert(reviews, appid, review_type)\n",
+    "                num_per_page=100\n",
+    "                day_range=100\n",
+    "                language='korean'\n",
     "\n",
-    "            sleep(5)\n",
     "\n",
-    "            \n",
-    "        except KeyboardInterrupt as e:\n",
-    "            break\n",
-    "        \n",
-    "        except json.decoder.JSONDecodeError:\n",
-    "                continue\n",
-    "        \n",
+    "                url = f\"https://store.steampowered.com/appreviews/{appid}?json=1&review_type={review_type}&day_range={day_range}&num_per_page={num_per_page}&language={language}\"\n",
+    "                resp = requests.get(url)\n",
+    "\n",
+    "                if not resp.ok:\n",
+    "                    print(url, resp)\n",
+    "                reviews = resp.json()\n",
+    "\n",
+    "                if reviews['reviews']:\n",
+    "                    review_insert(reviews, appid, review_type)\n",
+    "\n",
+    "                sleep(5)\n",
+    "\n",
+    "\n",
+    "            except KeyboardInterrupt as e:\n",
+    "                break\n",
+    "\n",
+    "            except json.decoder.JSONDecodeError:\n",
+    "                    continue\n",
+    "\n",
     "except:\n",
     "    raise\n",
-    "    \n",
+    "\n",
     "finally:\n",
     "    db_function.curs.close()\n",
-    "    db_function.conn.close()\n",
-    "    "
+    "    db_function.conn.close()\n"
    ]
   }
  ],
